# streamlit-agraph

./: README.md  pyproject.toml  setup.py
examples/: ego_graph.py  iris_decision_tree.py  karate_club_graph.py
streamlit_agraph/: ConfigBuilder.py  __init__.py  algos.py  config.py  data.py  edge.py  node.py  triple.py  triplestore.py
